examples/test/testpolicy13631.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13631
  namespace: namespace148
spec:
  podSelector:
    matchLabels:
      key13: value14
      key7: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value28
          key28: value48
          key34: value33
      podSelector:
        matchLabels:
          key30: value20
          key26: value24
